--- a/TDMail/MainWindow.xaml
+++ b/TDMail/MainWindow.xaml
@@ -1,11 +1,31 @@
 ﻿<Window x:Class="TDMail.MainWindow"
+        KeyDown="MainWindow_OnKeyDown"
+        KeyUp="MainWindow_OnKeyUp"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TDMail"
         mc:Ignorable="d"
-        Height="150" Width="300">
+        Height="200" Width="400">
     <Grid>
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Top">
+            <Label Margin="10"
+                   Height="30">
+                Hotkey
+            </Label>
+            <Label Name="HotKeyLabel"
+                   Margin="10"
+                   Width="160"
+                   Height="30">
+            </Label>
+            <Button Name="HotKeyPickerButton"
+                    Click="HotKeyPickerButton_OnClick"
+                    Margin="10"
+                    Width="120"
+                    Height="30">
+                Pick hotkey
+            </Button>
+        </StackPanel>
     </Grid>
 </Window>
