some incremental development of tray functionality

--- a/TDMail/MainWindow.xaml
+++ b/TDMail/MainWindow.xaml
@@ -6,6 +6,8 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TDMail"
+        ShowInTaskbar="False"
+        WindowState="Minimized"
         mc:Ignorable="d"
         Height="200" Width="400">
     <Grid>
